player namenのデータベースを作成
